--- a/package.json
+++ b/package.json
@@ -27,23 +27,20 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.14.2",
     "express-validator": "^3.1.2",
-    "fbgraph": "^1.3.0",
-    "github": "^9.2.0",
     "google-books-search": "^0.3.1",
     "lusca": "^1.4.1",
     "mongoose": "^4.6.6",
     "morgan": "^1.7.0",
-    "multer": "^1.2.0",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^3.1.7",
     "passport": "0.3.2",
     "passport-facebook": "^2.1.1",
-    "passport-github": "^1.1.0",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-oauth": "^1.0.0",
     "pug": "^2.0.0-beta6",
     "request": "^2.78.0",
+    "socket.io": "^2.0.3",
     "validator": "^7.0.0"
   },
   "devDependencies": {
