--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eslint": "eslint **/*.js"
   },
   "dependencies": {
-    "async-waterfall": "^0.1.5",
+    "async": "^2.5.0",
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
